cluster/id/outpost.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-outpost
  namespace: id
  annotations:
    external-dns.alpha.kubernetes.io/target: luma.chrismiller.xyz
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - id.luma.chrismiller.xyz
      secretName: id-tls
  rules:
    - host: id.luma.chrismiller.xyz
      http:
        paths: /outpost.goauthentik.io
        pathType: Prefix
        backend:
          service:
            name: ak-outpost-authentik-embedded-outpost
            port:
              number: 9000
